--- a/base/templates/form.html
+++ b/base/templates/form.html
@@ -11,7 +11,7 @@
     <div class="wedding-form">
         <h1>Generate Your Wedding Card Now</h1>
         <hr>
-        <form action="" method="POST" enctype="multipart/form-data">
+        <form action="" method="POST" enctype="multipart/form-data" id="weddingform">
             {% csrf_token %}
             <div class="wedding-card-details">
                 <!-- Groom Details -->
@@ -90,4 +90,26 @@
         </form>
     </div>
 </body>
+<script>
+    const dateInput = document.getElementById('date');
+    const weddingForm = document.getElementById('weddingform');
+
+    weddingForm.addEventListener('submit', function (event) {
+        // Get the selected date from the input
+        const selectedDate = new Date(dateInput.value);
+        
+        // Get today's date and set the time to 00:00:00 to ignore the time part
+        const today = new Date();
+        today.setHours(0, 0, 0, 0);
+
+        // Check if the selected date is in the past
+        if (selectedDate < today) {
+            alert("The selected date cannot be in the past!!!");
+            event.preventDefault();  // Prevent form submission
+        } else {
+            alert("Form submitted successfully");
+        }
+    });
+</script>
+
 </html>
